# Flosion

./: .gitmodules  CMakeLists.txt  Flosion.cpp  Flosion.sln  README.md  floatconfig.h
core/: CMakeLists.txt  MultiInput.h  NumberInput.cpp  NumberInput.h  NumberResult.h  NumberSource.cpp  NumberSource.h  Sample.h  SingleInput.cpp  SingleInput.h  SoundInput.cpp  SoundInput.h  SoundQueue.cpp  SoundQueue.h  SoundResult.cpp  SoundResult.h  SoundSource.cpp  SoundSource.h  Stateful.cpp  Stateful.h  musical.cpp  musical.h
core/include/: BorrowingNumberSource.hpp  BorrowingNumberSource.tpp  DirectStateMap.hpp  Immovable.hpp  KeyedStateMap.hpp  MultiSoundInput.hpp  MultiSoundInput.tpp  Network.hpp  NumberInput.hpp  NumberNode.hpp  NumberResult.hpp  NumberSource.hpp  RealtimeSoundSource.hpp  Sample.hpp  SingleSoundInput.hpp  SoundChunk.hpp  SoundInput.hpp  SoundNode.hpp  SoundNode.tpp  SoundResult.hpp  SoundSource.hpp  SoundSourceTemplate.hpp  SoundSourceTemplate.tpp  SoundState.hpp  SoundState.tpp  State.hpp  StateAllocator.hpp  StateArray.hpp  StateBorrower.hpp  StateOwner.hpp  StateTable.hpp  StateUser.hpp  StatefulNumberSource.hpp  StatelessSoundSource.hpp
core/include/Flosion/Core/: BorrowingNumberSource.hpp  BorrowingNumberSource.tpp  Immovable.hpp  MultiSoundInput.hpp  MultiSoundInput.tpp  Network.hpp  NodeBase.hpp  NodeBase.tpp  NumberNode.hpp  NumberResult.hpp  NumberSource.hpp  Reactable.hpp  RecursiveSharedMutex.hpp  Sample.hpp  Signal.hpp  Signal.tpp  SingleSoundInput.hpp  SoundChunk.hpp  SoundInput.hpp  SoundNode.hpp  SoundNode.tpp  SoundQueue.hpp  SoundResult.hpp  SoundSource.hpp  SoundSource.tpp  SoundSourceTemplate.hpp  SoundSourceTemplate.tpp  SoundState.hpp  SoundState.tpp  StateAllocator.hpp  StateBorrower.hpp  StateTable.hpp  StateTable.tpp
core/old/: MultiInput.h  Sample.h  SingleInput.cpp  SoundQueue.cpp  SoundResult.h  Stateful.cpp  Stateful.h
core/src/: BorrowingNumberSource.cpp  NumberNode.cpp  NumberResult.cpp  NumberSource.cpp  RecursiveSharedMutex.cpp  Sample.cpp  Signal.cpp  SingleSoundInput.cpp  SoundChunk.cpp  SoundInput.cpp  SoundNode.cpp  SoundQueue.cpp  SoundResult.cpp  SoundSource.cpp  SoundState.cpp  StateBorrower.cpp  StateTable.cpp
objects/: CMakeLists.txt
objects/audio/: CMakeLists.txt  audio.h  audioUI.h
objects/constants/: CMakeLists.txt  constantUI.h  constantsUI.h
objects/convolver/: CMakeLists.txt  convolver.h  convolverUI.h
objects/dac/: CMakeLists.txt  DAC.cpp  DAC.h  DACUI.h  dac.cpp  dac.h  dacUI.h
objects/distortion/: CMakeLists.txt  distortion.h  distortionUI.h
objects/ensemble/: CMakeLists.txt  ensemble.h  ensembleUI.h
objects/filter/: CMakeLists.txt  filter.h  filterUI.h
objects/functions/: CMakeLists.txt  functions.h  functionsUI.h
objects/include/Flosion/Objects/: ADSR.hpp  Accumulator.hpp  AudioClip.hpp  DAC.hpp  Ensemble.hpp  ExponentialSmoother.hpp  FlipFlop.hpp  Functions.hpp  FunctionsBase.hpp  Highpass.hpp  LinearSmoother.hpp  LiveInput.hpp  LiveMelody.hpp  LiveSequencer.hpp  Lowpass.hpp  Melody.hpp  Mixer.hpp  Oscillator.hpp  RandomWalk.hpp  Resampler.hpp  Router.hpp  Splicer.hpp  Variable.hpp  WaveForms.hpp  WaveGenerator.hpp  WaveTable.hpp
objects/phasevocoder/: CMakeLists.txt  phasevocoder.h  phasevocoderUI.h
objects/sampler/: CMakeLists.txt  sampler.h  samplerUI.h
objects/spline/: CMakeLists.txt  spline.h  splineUI.h
objects/src/: ADSR.cpp  Accumulator.cpp  AudioClip.cpp  DAC.cpp  Ensemble.cpp  ExponentialSmoother.cpp  FlipFlop.cpp  Functions.cpp  FunctionsBase.cpp  LinearSmoother.cpp  LiveInput.cpp  LiveMelody.cpp  LiveSequencer.cpp  Lowpass.cpp  Melody.cpp  Mixer.cpp  Oscillator.cpp  RandomWalk.cpp  Resampler.cpp  Router.cpp  Splicer.cpp  Variable.cpp  WaveForms.cpp  WaveGenerator.cpp  WaveTable.cpp
objects/timestretch/: CMakeLists.txt  timestretch.h  timestretchUI.h
objects/wavegen/: CMakeLists.txt  wavegen.h  wavegenUI.h
objects/wavetable/: CMakeLists.txt  wavetable.h  wavetableUI.h
test/: CMakeLists.txt  FlosionTest.cpp  SoundSourceTest.h  StatefulTest.h
tests/: CMakeLists.txt
tests/src/: SoundNodeTest.cpp
ui/: BoxUI.cpp  BoxUI.h  CMakeLists.txt  FlosionUI.cpp  FlosionUI.h  Font.cpp  Font.h  NumberWireUI.cpp  NumberWireUI.h  ObjectFactory.h  ObjectUI.cpp  ObjectUI.h  SoundWireUI.cpp  SoundWireUI.h  WireBase.h  boxUI.cpp  boxUI.h  numberinputUI.cpp  numberinputUI.h  numberoutputUI.cpp  numberoutputUI.h  numberwireUI.cpp  numberwireUI.h  objectUI.cpp  objectUI.h  soundinputUI.cpp  soundoutputUI.cpp  soundoutputUI.h  soundwireUI.cpp  soundwireUI.h
ui/core/: CMakeLists.txt
ui/core/include/Flosion/UI/Core/: ArgumentParser.hpp  BorrowingNumberObject.hpp  Box.hpp  BoxContextMenu.hpp  Flosion.hpp  FlosionUI.hpp  Font.hpp  NumberObject.hpp  NumberPegs.hpp  NumberWire.hpp  Object.hpp  ObjectFactory.hpp  Panel.hpp  PanelContextMenu.hpp  Serialization.hpp  SoundObject.hpp  SoundPegs.hpp  SoundTraits.hpp  SoundWire.hpp  WireBase.hpp
ui/core/src/: ArgumentParser.cpp  BorrowingNumberObject.cpp  Box.cpp  BoxContextMenu.cpp  Flosion.cpp  FlosionUI.cpp  Font.cpp  NumberObject.cpp  NumberPegs.cpp  NumberWire.cpp  Object.cpp  ObjectFactory.cpp  Panel.cpp  PanelContextMenu.cpp  Serialization.cpp  SoundObject.cpp  SoundPegs.cpp  SoundTraits.cpp  SoundWire.cpp  WireBase.cpp
ui/objects/: CMakeLists.txt
ui/objects/include/Flosion/UI/Objects/: ADSR.hpp  Accumulator.hpp  AudioClip.hpp  DAC.hpp  Ensemble.hpp  ExponentialSmoother.hpp  FlipFlop.hpp  Functions.hpp  LinearSmoother.hpp  LiveInput.hpp  (+12 more)
ui/objects/src/: ADSR.cpp  Accumulator.cpp  AudioClip.cpp  BitCrush.cpp  DAC.cpp  Ensemble.cpp  ExponentialSmoother.cpp  FlipFlop.cpp  Functions.cpp  LinearSmoother.cpp  LiveInput.cpp  LiveSequencer.cpp  Lowpass.cpp  Mixer.cpp  Oscillator.cpp  RandomWalk.cpp  Resampler.cpp  Router.cpp  Splicer.cpp  Variable.cpp  WaveForms.cpp  WaveGenerator.cpp  WaveTable.cpp
util/: CMakeLists.txt  filebrowser.h  hannwindow.cpp  hannwindow.h  sstreamutil.h
util/include/Flosion/Util/: Base64.hpp  FFT.hpp  FileBrowser.hpp  Pi.hpp  RNG.hpp  Volume.hpp
util/src/: Base64.cpp  FileBrowser.cpp  RNG.cpp  Volume.cpp
(+83 files in other folders)
